[tool.poetry]
name = "nOAuth"
version = "0.1.0"
description = "A simple oauth server that does NO real authentication and helps you test systems that depend on OAuth"
authors = ["Ben Adida <ben@voting.works>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
