[tool.poetry]
name = "nOAuth"
version = "0.2.0"
description = "A simple oauth server that does NO real authentication and helps you test systems that depend on OAuth"
authors = ["VotingWorks Eng <eng@voting.works>"]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
